--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             alt=""
           />
         </div>
-        <div class="photo-name">이름</div>
+        <div class="photo-name">배고파</div>
       </div>
       <div class="photo-container">
         <div class="photo-card">
