--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div id="center">
         <div id="heading">
           <h1>My photo gallery</h1>
-          <h4>my old memories from my life</h4>
+          <h4>photo that i like or love </h4>
         </div>
         <div id="search">
           <input type="text" placeholder="Search photo ... " />
