--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR-i1TsJ0G4Y6js4IjWLRBmaiTxjWFoyBd2uw&usqp=CAU"
           />
         </div>
-        <div class="photo-name">Flower</div>
+        <div class="photo-name">고양이</div>
       </div>
       <div class="photo-container">
         <div class="photo-card">
@@ -79,7 +79,7 @@
             src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSrJwxEQxfwY6_SQ4AZTxYcWF8YBKaKn30k9g&usqp=CAU"
           />
         </div>
-        <div class="photo-name">이름</div>
+        <div class="photo-name">Flower</div>
       </div>
       <div class="photo-container">
         <div class="photo-card">
